Bookmarks: overflow correction

--- a/src/app/main/components/my-bookmarks/my-bookmarks.component.scss
+++ b/src/app/main/components/my-bookmarks/my-bookmarks.component.scss
@@ -1,3 +1,7 @@
-mat-table {
+/*mat-table {
+  overflow-y: auto;
+}*/
+
+.kimios-content-area {
   overflow-y: auto;
 }
